--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
-ultmountpoints:
+mountpoints:
   /: https://drive.google.com/drive/u/4/folders/1Zwb6Wysw3RR7EEN9blpXjUAzBvqZ4rPZ
 
 folders:
-  /productssssssss/: /products/utorak
+  /products/: /products/default
