--- a/fstab.yaml
+++ b/fstab.yaml
@@ -2,4 +2,4 @@ mountpoints:
   /: https://drive.google.com/drive/u/4/folders/1Zwb6Wysw3RR7EEN9blpXjUAzBvqZ4rPZ
 
 folders:
-  /productssss/: /productsssss/default
+  /products/: /productsssss/default
