--- a/fstab.yaml
+++ b/fstab.yaml
@@ -2,5 +2,4 @@ mountpoints:
   /: https://drive.google.com/drive/u/4/folders/1Zwb6Wysw3RR7EEN9blpXjUAzBvqZ4rPZ
 
 folders:
-  /products-low/: /products-low/default
-  /products-high/: /products-high/default
+  /products/: /products/default
